<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name = "viewModel"
            type="com.example.myapplication.LoginViewModel" />

    </data>

    <LinearLayout
        android:layout_width="353dp"
        android:layout_height="342dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@color/design_default_color_primary"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="185dp"
            android:layout_height="63dp"
            android:text="@string/Login"
            android:textColor="@color/white"
            android:textSize="60sp" />

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="24dp"
            android:background="@color/white"
            android:hint="@string/Email"
            android:imeActionLabel="@string/action_sign_in"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:text="@={viewModel.email}"
            android:textColorHint="@color/black"
            app:error="@{viewModel.emailError}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@color/white"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:text="@={viewModel.password}"
            android:textColorHint="@color/black"
            app:error="@{viewModel.passwordError}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_editText" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="247dp"
            android:layout_height="58dp"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="64dp"
            android:backgroundTint="@color/black"
            android:onClick="@{()-> viewModel.onSingInClicked()}"
            android:text="@string/action_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_editText"
            app:layout_constraintVertical_bias="0.2" />


    </LinearLayout>

</layout>